form-card now provides nz-grid layout w/ colSpan props option

--- a/client/src/app/forms2/wrappers/form-card/form-card.wrapper.html
+++ b/client/src/app/forms2/wrappers/form-card/form-card.wrapper.html
@@ -1,6 +1,14 @@
 <nz-card
   [nzTitle]="props.title"
   [nzExtra]="cardExtra">
-  <ng-container #fieldComponent></ng-container>
+  <nz-row [nzGutter]="[6, 6]">
+    <nz-col
+      *ngFor="let field of field.fieldGroup"
+      [nzSpan]="field.props?.colSpan || 12">
+      <formly-field [field]="field"></formly-field>
+    </nz-col>
+  </nz-row>
+
+  <!-- <ng-container #fieldComponent></ng-container> -->
 </nz-card>
 <ng-template #cardExtra> </ng-template>
