add max height and overflow in addition to expand for long descriptions

--- a/client/src/app/views/assertions/assertions-detail/assertions-summary/assertions-summary.page.html
+++ b/client/src/app/views/assertions/assertions-detail/assertions-summary/assertions-summary.page.html
@@ -17,9 +17,10 @@
 
             <nz-descriptions-item nzTitle="Description">
               <p nz-typography
+                class="summary-block"
                 nzEllipsis
                 nzExpandable
-                [nzEllipsisRows]="14">{{ assertion.description }}</p>
+                [nzEllipsisRows]="6">{{ assertion.description }}</p>
             </nz-descriptions-item>
 
           </nz-descriptions>
