--- a/client/src/app/views/evidence/evidence-detail/evidence-summary/evidence-summary.page.html
+++ b/client/src/app/views/evidence/evidence-detail/evidence-summary/evidence-summary.page.html
@@ -11,9 +11,10 @@
             nzBordered="true">
             <nz-descriptions-item nzTitle="Statement">
               <p nz-typography
+                class="summary-block"
                 nzEllipsis
                 nzExpandable
-                [nzEllipsisRows]="14">{{ evidence.description }}</p>
+                [nzEllipsisRows]="6">{{ evidence.description }}</p>
             </nz-descriptions-item>
 
           </nz-descriptions>
