--- a/client/src/app/forms2/types/evidence-select/evidence-manager/evidence-manager.component.html
+++ b/client/src/app/forms2/types/evidence-select/evidence-manager/evidence-manager.component.html
@@ -2,8 +2,12 @@
   [nzTitle]="cardTitle"
   nzSize="small">
   <nz-table
+    #virtualTable
     *ngrxLet="tableData$ as data"
     [nzData]="data.rows"
+    [nzScroll]="{ x: '100px', y: '500px' }"
+    [nzVirtualForTrackBy]="trackByIndex"
+    [nzVirtualItemSize]="29"
     [nzFrontPagination]="false"
     [nzLoading]="loading$ | ngrxPush"
     nzSize="small"
@@ -20,38 +24,40 @@
       </tr>
     </thead>
     <tbody>
-      <tr
-        *ngFor="let row of data.rows"
-        class="data-row">
-        <td *ngFor="let col of data.cols">
-          <!-- eid col -->
-          <ng-container [ngSwitch]="col.key">
-            <ng-container *ngSwitchCase="'id'">
-              <cvc-entity-tag
-                [cvcCacheId]="'EvidenceItem:' + row.id"></cvc-entity-tag>
+      <ng-template
+        nz-virtual-scroll
+        let-row>
+        <tr class="data-row">
+          <td *ngFor="let col of data.cols">
+            <!-- eid col -->
+            <ng-container [ngSwitch]="col.key">
+              <ng-container *ngSwitchCase="'id'">
+                <cvc-entity-tag
+                  [cvcCacheId]="'EvidenceItem:' + row.id"></cvc-entity-tag>
+              </ng-container>
+              <ng-container *ngSwitchCase="'molecularProfile'">
+                <cvc-entity-tag
+                  [cvcCacheId]="
+                    'MolecularProfile:' + row.molecularProfile.id
+                  "></cvc-entity-tag>
+              </ng-container>
+              <ng-container *ngSwitchCase="'disease'">
+                <cvc-entity-tag
+                  *ngIf="row.disease; else emptyCell"
+                  [cvcCacheId]="'Disease:' + row.disease.id"></cvc-entity-tag>
+              </ng-container>
+              <ng-container *ngSwitchCase="'therapies'">
+                <cvc-entity-tag
+                  *ngFor="let therapy of row.therapies; else: emptyCell"
+                  [cvcCacheId]="'Therapy:' + therapy.id"></cvc-entity-tag>
+              </ng-container>
+              <span *ngSwitchDefault>
+                {{ row[col.key] }}
+              </span>
             </ng-container>
-            <ng-container *ngSwitchCase="'molecularProfile'">
-              <cvc-entity-tag
-                [cvcCacheId]="
-                  'MolecularProfile:' + row.molecularProfile.id
-                "></cvc-entity-tag>
-            </ng-container>
-            <ng-container *ngSwitchCase="'disease'">
-              <cvc-entity-tag
-                *ngIf="row.disease; else emptyCell"
-                [cvcCacheId]="'Disease:' + row.disease.id"></cvc-entity-tag>
-            </ng-container>
-            <ng-container *ngSwitchCase="'therapies'">
-              <cvc-entity-tag
-                *ngFor="let therapy of row.therapies; else: emptyCell"
-                [cvcCacheId]="'Therapy:' + therapy.id"></cvc-entity-tag>
-            </ng-container>
-            <span *ngSwitchDefault>
-              {{ row[col.key] }}
-            </span>
-          </ng-container>
-        </td>
-      </tr>
+          </td>
+        </tr>
+      </ng-template>
     </tbody>
   </nz-table>
 </nz-card>
