evidence-manager updating evidence-select form value

--- a/client/src/app/forms2/types/evidence-select/evidence-select.type.html
+++ b/client/src/app/forms2/types/evidence-select/evidence-select.type.html
@@ -41,7 +41,7 @@
     *ngIf="showMgr$ | ngrxPush as showMgr">
     <cvc-evidence-manager
       (cvcSelectedIdsChange)="
-        onSelectedIds$.next($event)
+        onEidSelect$.next($event)
       "></cvc-evidence-manager>
   </nz-col>
 </nz-row>
