--- a/client/src/app/forms2/types/disease-select/disease-select.type.html
+++ b/client/src/app/forms2/types/disease-select/disease-select.type.html
@@ -14,6 +14,7 @@
   [cvcSelectOpen]="selectOpen$ | ngrxPush"
   (cvcOnSearch)="onSearch$.next($event)"
   (cvcOnOpenChange)="onOpenChange$.next($event)"
+  (cvcSelectComponent)="selectComponent = $event"
   (cvcOnModelChange)="props.change && props.change(field, $event)">
 </cvc-entity-select>
 
