onPopulate working from evidence-manager output

--- a/client/src/app/forms2/types/evidence-select/evidence-manager/evidence-manager.component.html
+++ b/client/src/app/forms2/types/evidence-select/evidence-manager/evidence-manager.component.html
@@ -92,4 +92,4 @@
     >--</span
   ></ng-template
 >
-<ng-template #cardTitle> Evidence Manager </ng-template>
+<ng-template #cardTitle>Use checkboxes to select or deselect EIDs</ng-template>
