updated select fields to work with onPopulate$

--- a/client/src/app/forms2/types/disease-select/disease-select.type.html
+++ b/client/src/app/forms2/types/disease-select/disease-select.type.html
@@ -80,6 +80,6 @@
   let-createMsg>
   <cvc-disease-quick-add-form
     [cvcSearchString]="searchStr"
-    (cvcOnCreate)="onCreate$.next($event)">
+    (cvcOnCreate)="onPopulate$.next($event)">
   </cvc-disease-quick-add-form>
 </ng-template>
