--- a/client/src/app/forms2/types/source-select/source-select.type.html
+++ b/client/src/app/forms2/types/source-select/source-select.type.html
@@ -100,7 +100,7 @@
   <cvc-source-quick-add
     [cvcCitationId]="model.citationId"
     [cvcSourceType]="model.sourceType"
-    (cvcOnCreate)="onCreate$.next($event)"></cvc-source-quick-add>
+    (cvcOnCreate)="onPopulate$.next($event)"></cvc-source-quick-add>
 </ng-template>
 
 <!-- add source button -->
