--- a/client/src/app/forms2/types/therapy-select/therapy-select.type.html
+++ b/client/src/app/forms2/types/therapy-select/therapy-select.type.html
@@ -77,6 +77,6 @@
   let-createMsg>
   <cvc-therapy-quick-add-form
     [cvcSearchString]="searchStr"
-    (cvcOnCreate)="onCreate$.next($event)">
+    (cvcOnCreate)="onPopulate$.next($event)">
   </cvc-therapy-quick-add-form>
 </ng-template>
