--- a/client/src/app/forms2/types/variant-select/variant-select.type.html
+++ b/client/src/app/forms2/types/variant-select/variant-select.type.html
@@ -73,6 +73,6 @@
     [cvcSearchString]="searchStr"
     [cvcGeneId]="onGeneId$ | ngrxPush"
     [cvcGeneName]="onGeneName$ | ngrxPush"
-    (cvcOnCreate)="onCreate$.next($event)">
+    (cvcOnCreate)="onPopulate$.next($event)">
   </cvc-variant-quick-add-form>
 </ng-template>
